# Logic-Proofs

./: .gitignore  README.md  flake.nix  main.hs  proofChecker.cabal
src/: Core.hs  Main.hs  Rules.hs  Types.hs  Util.hs
