name:                proof-checker
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable proof-checker
    main-is:             Main.hs
    other-modules:       Types
                      , Rules
                      , Core
                      , Util
    build-depends:       base >= 4.7 && < 5
                      , mtl
    hs-source-dirs:      src
    default-language:    Haskell2010
